--- a/src/App.css
+++ b/src/App.css
@@ -1,13 +1,70 @@
-form {
+.main-form {
   align-items: flex-start;
   display: flex;
   flex-direction: column;
   width: 40%;
 }
 
-form label {
+.input-label {
+  color: #2a2c2e;
   display: flex;
   flex-direction: column;
+  font-weight: 700;
   margin: 10px 0;
   width: 100%;
+}
+
+h1 {
+  font-size: 50px;
+  text-align: center;
+}
+
+.checkbox-input {
+  border-radius: 5px;
+  cursor: pointer;
+  height: 18px;
+  margin: 0 10px;
+  width: 18px;
+}
+
+.checkbox-label {
+  align-items: center;
+  cursor: pointer;
+  display: flex;
+  font-weight: 700;
+  margin: 10px 0;
+}
+
+.form-input {
+  background-color: white;
+  border: 1px solid #ced4da;
+  border-radius: 0.25rem;
+  color: #495057;
+  font-size: 1rem;
+  line-height: 1.5;
+  margin-top: 5px;
+  padding: 0.375rem 0.75rem;
+}
+
+.card-creation-container {
+  border: 3px solid black;
+  display: flex;
+  justify-content: space-between;
+  padding: 0 20px;
+}
+
+button {
+  border: 1px solid rgba(128, 128, 128, 0.459);
+  border-radius: 5px;
+  font-size: 20px;
+  font-weight: 700;
+  line-height: 1.5;
+  margin: 20px 0;
+  padding: 3px 20px;
+}
+
+button:enabled {
+  background-color: rgb(25, 135, 84);
+  color: white;
+  cursor: pointer;
 }
