--- a/src/App.css
+++ b/src/App.css
@@ -47,7 +47,6 @@ h1 {
 }
 
 .card-creation-container {
-  border: 3px solid black;
   display: flex;
   justify-content: space-between;
   padding: 0 20px;
@@ -67,4 +66,78 @@ button:enabled {
   background-color: rgb(25, 135, 84);
   color: white;
   cursor: pointer;
+}
+
+.preview {
+  align-items: center;
+  border: 3px solid red;
+  display: flex;
+  flex-direction: column;
+  width: 50%;
+}
+
+.card {
+  align-items: center;
+  background-color: rgb(83, 5, 5);
+  border: 4px solid rgb(255, 208, 0);
+  border-radius: 9px;
+  color: rgb(250, 226, 8);
+  display: flex;
+  flex-direction: column;
+  width: 350px;
+}
+
+.card h2 {
+  align-items: center;
+  background-color: rgb(255, 208, 0);
+  color: #2a2c2e;
+  display: flex;
+  font-size: 25px;
+  font-weight: 700;
+  padding: 10px 0;
+  width: 100%;
+}
+
+.card h2 div:nth-child( 1 ) {
+  margin: 0 10px;
+}
+
+.card img {
+  background-color: #49505749;
+  height: 200px;
+  width: 270px;
+}
+
+.attribute {
+  background-color: rgb(255, 208, 0);
+  border-radius: 4px;
+  box-shadow: 0 0 4px black;
+  color: #2a2c2e;
+  display: flex;
+  font-weight: 700;
+  justify-content: space-between;
+  padding: 5px;
+  width: 80%;
+}
+
+.rarity-stats {
+  display: flex;
+  font-size: 18px;
+  justify-content: space-around;
+  width: 80%;
+}
+
+.rarity-stats p:nth-child( 1 ) {
+  color: rgb(185, 90, 77);
+}
+
+.rarity-stats p:nth-child( 2 ) {
+  color: rgba(255, 8, 8, 0.911);
+  font-weight: 700;
+}
+
+.description {
+  color: white;
+  max-height: 40px;
+  width: 80%;
 }
