--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,7 @@
   align-items: flex-start;
   display: flex;
   flex-direction: column;
+  padding: 0 20px;
   width: 40%;
 }
 
@@ -15,6 +16,7 @@
 }
 
 h1 {
+  color: rgb(0, 154, 128);
   font-size: 50px;
   text-align: center;
 }
@@ -47,9 +49,9 @@ h1 {
 }
 
 .card-creation-container {
+  background-color: white;
   display: flex;
   justify-content: space-between;
-  padding: 0 20px;
 }
 
 button {
@@ -70,16 +72,18 @@ button:enabled {
 
 .preview {
   align-items: center;
-  border: 3px solid red;
+  background-color: rgb(71, 79, 94);
+  color: white;
   display: flex;
   flex-direction: column;
+  font-weight: 700;
   width: 50%;
 }
 
 .card {
   align-items: center;
-  background-color: rgb(83, 5, 5);
-  border: 4px solid rgb(255, 208, 0);
+  background-color: rgb(156, 67, 71);
+  border: 4px solid rgb(254, 191, 39);
   border-radius: 9px;
   color: rgb(250, 226, 8);
   display: flex;
@@ -98,12 +102,23 @@ button:enabled {
   width: 100%;
 }
 
+.deck-container .deck-card {
+  align-items: center;
+  display: flex;
+  flex-direction: column;
+  margin: 0 20px;
+}
+
+.deck-container .deck-card button {
+  margin-bottom: 30px;
+  margin-top: 5px;
+}
+
 .card h2 div:nth-child( 1 ) {
   margin: 0 10px;
 }
 
 .card img {
-  background-color: #49505749;
   height: 200px;
   width: 270px;
 }
@@ -116,6 +131,7 @@ button:enabled {
   display: flex;
   font-weight: 700;
   justify-content: space-between;
+  margin: 8px 0;
   padding: 5px;
   width: 80%;
 }
@@ -128,16 +144,63 @@ button:enabled {
 }
 
 .rarity-stats p:nth-child( 1 ) {
-  color: rgb(185, 90, 77);
+  color: rgb(71, 5, 5);
+  font-weight: 700;
 }
 
 .rarity-stats p:nth-child( 2 ) {
-  color: rgba(255, 8, 8, 0.911);
+  color: rgb(33, 179, 154);
   font-weight: 700;
+  text-shadow: -1px -1px black , 1px -1px black , -1px 1px black , 1px 1px black;
 }
 
 .description {
   color: white;
   max-height: 40px;
   width: 80%;
+}
+
+.filter-container {
+  align-items: center;
+  color: white;
+  display: flex;
+  flex-direction: column;
+  margin-top: 20px;
+}
+
+.filter-container h3 {
+  color: rgb(0, 154, 128);
+  font-size: 23px;
+  margin: 20px 0;
+}
+
+.filter-inputs-container {
+  display: flex;
+  margin: 0 auto;
+  margin-bottom: 40px;
+  width: 80%;
+}
+
+.filter-inputs-container label {
+  color: white;
+  margin: 0 20px;
+}
+
+.deck-section .deck-title {
+  color: rgb(0, 154, 128);
+  font-size: 30px;
+  text-align: center;
+}
+
+.deck-container {
+  background-color: rgb(39, 35, 49);
+  border: 1px solid #c1c9d118;
+  border-radius: 5px;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  margin: 40px auto;
+  min-height: 400px;
+  padding: 25px;
+  width: 90%;
 }
