--- a/src/App.css
+++ b/src/App.css
@@ -26,7 +26,7 @@ h1 {
   cursor: pointer;
   height: 18px;
   margin: 0 10px;
-  width: 18px;
+  min-width: 18px;
 }
 
 .checkbox-label {
@@ -82,7 +82,6 @@ button:enabled {
 
 .card {
   align-items: center;
-  background-color: rgb(156, 67, 71);
   border: 4px solid rgb(254, 191, 39);
   border-radius: 9px;
   color: rgb(250, 226, 8);
@@ -93,7 +92,7 @@ button:enabled {
 
 .card h2 {
   align-items: center;
-  background-color: rgb(255, 208, 0);
+  background-color: rgb(254, 191, 39);
   color: #2a2c2e;
   display: flex;
   font-size: 25px;
@@ -107,10 +106,11 @@ button:enabled {
   display: flex;
   flex-direction: column;
   margin: 0 20px;
+  margin-bottom: 20px;
 }
 
 .deck-container .deck-card button {
-  margin-bottom: 30px;
+  margin-bottom: 0;
   margin-top: 5px;
 }
 
@@ -119,6 +119,7 @@ button:enabled {
 }
 
 .card img {
+  background-color: #ffffff17;
   height: 200px;
   width: 270px;
 }
@@ -144,7 +145,7 @@ button:enabled {
 }
 
 .rarity-stats p:nth-child( 1 ) {
-  color: rgb(71, 5, 5);
+  color: white;
   font-weight: 700;
 }
 
@@ -175,6 +176,7 @@ button:enabled {
 }
 
 .filter-inputs-container {
+  align-items: flex-end;
   display: flex;
   width: 80%;
 }
@@ -201,11 +203,37 @@ button:enabled {
   border-radius: 5px;
   display: flex;
   flex-wrap: wrap;
-  justify-content: center;
-  min-height: 400px;
+  justify-content: flex-start;
+  margin-bottom: 40px;
+  min-height: 300px;
   padding: 25px;
-  width: 90%;
+  width: 87%;
 }
+
+.blue {
+  background-image: linear-gradient(to right, rgb(96, 44, 141), rgba(31, 0, 58, 0.712));
+}
+
+.red {
+  background-image: linear-gradient(to right, rgb(156, 67, 71), rgba(58, 0, 4, 0.712));
+}
+
+.green {
+  background-image: linear-gradient(to right, rgb(63, 111, 86), rgba(2, 58, 0, 0.712));
+}
+
+@media screen and ( max-width : 400px ) {
+
+  .card {
+    width: 270px;
+  }
+
+  .card img {
+    height: 150px;
+    width: 220px;
+  }
+}
+
 
 @media screen and ( max-width : 820px ) {
 
@@ -226,9 +254,62 @@ button:enabled {
 
   .filter-inputs-container {
     flex-wrap: wrap;
+    width: 70%;
   }
 
   .filter-inputs-container label {
     margin: 7px 0;
   }
+
+  .deck-container {
+    width: 80vw;
+  }
+}
+
+@media screen and ( max-width : 1370px ) {
+
+  .deck-container {
+    justify-content: center;
+  }
+}
+
+@media screen and ( min-width : 1700px ) {
+
+  body {
+    font-size: 20px;
+  }
+
+  .filter-inputs-container {
+    width: 50%;
+  }
+
+  .main-form {
+    padding-left: 70px;
+  }
+
+  .preview {
+    border-radius: 5px;
+    padding: 20px 0;
+  }
+
+  .card-creation-container {
+    border: 1px solid #27272700;
+    border-radius: 5px;
+    margin: auto;
+    width: 90%;
+  }
+
+}
+
+select:disabled {
+  color: black;
+}
+
+input:disabled {
+  background-color: rgb(186, 185, 190);
+  color: black;
+}
+
+input:disabled::placeholder {
+  color: black;
 }
