--- a/src/App.css
+++ b/src/App.css
@@ -162,8 +162,10 @@ button:enabled {
 
 .description {
   color: white;
-  max-height: 40px;
+  height: 45px;
+  margin: 15px 0;
   width: 80%;
+  word-break: break-all;
 }
 
 .filter-container {
