--- a/src/App.css
+++ b/src/App.css
@@ -163,7 +163,8 @@ button:enabled {
 .description {
   color: white;
   height: 45px;
-  margin: 15px 0;
+  margin: 0;
+  margin-bottom: 15px;
   width: 80%;
   word-break: break-all;
 }
